feat: implement custom user detail service for Spring Security auth